# smit_v2

./: .env.compose.pg  .env.compose.rmq  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  exa.json  prometheus.yml  pyproject.toml  requirements_dev.txt
.github/workflows/: PULL_REAUEST_TEMPALTE.md  ci-cd.yaml
app/: application.py  main.py  main_rabbit_consumer.py  routers.py
app/api/auth/: auth.py  dao.py  dependencies.py  exceptions.py  router.py  schemas.py
app/api/blog/: dao.py  router.py  schemas.py
app/api/default/: router.py  schemas.py
app/api/file/: router.py
app/api/tariff/: dao.py  example_descriptions.py  rabbit_producer.py  redis_client.py  router.py  schemas.py  utils.py
app/core/: logger_config.py  settings.py
app/dao/: base.py  database.py  session_maker.py
app/kafka/: check_example_sent_message.py  dependencies.py  producer.py
app/models/: __init__.py  blog.py  blogtag.py  date_accession.py  role.py  tag.py  tariff.py  user.py
app/rabbit/: base_concumer.py  base_producer.py  dependencies.py  example_cunsumer.py  models.py
app/redis/: check_example_connect_redis.py  dependencies.py  redis_client.py
app/templates/: index.html
docker/: app.sh  consumer.sh
migrations/: env.py
migrations/versions/: 0374f41b195e_add_tarifs_and_dateaccession.py  7e5a31f2524b_initial_migration.py
prometheus/: prometheus.yml
