[tool.poetry]
name = "smit-v2"
version = "0.1.0"
description = ""
authors = ["Nik <erofeev.nik.it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"
ruff = "^0.8.2"
fastapi = {extras = ["all"], version = "^0.115.6"}
python-multipart = "^0.0.19"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
uvicorn = "^0.32.1"
pydantic = { extras = ["email"], version = "^2.10.3" }
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
loguru = "^0.7.3"
isort = "^5.13.2"
mypy = "^1.13.0"
sentry-sdk = "^2.19.2"
notifiers = "^1.3.3"
pydantic-settings = "^2.6.1"
black = "24.3.0"
setuptools = "^75.6.0"
greenlet = "^3.1.1"
bcrypt = "4.0.1"
aiokafka = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
skip-string-normalization = true
exclude = '''
\\.git|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|grafana-dashboard\\.json
|\\*/docker/\\*
|prometheus\\.yml
|venv
|env
'''


[tool.ruff]
line-length = 88


[tool.isort]
profile = 'black'
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git',
    '__pycache__',
    '*.yml.enc',
    'migrations/',
    'grafana-dashboard.json',
    'grafana-dashboard.json',
    '*/docker/*',
    'prometheus.yml',
    '*/venv/*',
    '*/env/*',
]

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"